# darioaxel-django-rest-postgres-campusdigitalfp

./: Dockerfile  README-jwt-google.md  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
campusdigitalfp/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
