[tool.poetry]
name = "campusdigitalfp-api"
version = "0.1.0"
description = ""
authors = ["Dario Ureña <darioaxel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.2"
django = "5.2.3"
psycopg2-binary = "^2.9.10"
django-environ = "^0.12.0"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
django-rest-passwordreset = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
